# glassworks

./: .gitignore  .glassware-cache.json  .glassware-orchestrator-cache.db  .glassware-orchestrator-cache.db-shm  .glassware-orchestrator-cache.db-wal  .glassware-scan-registry.json  10K-HANDOFF-SUMMARY.md  10K-PREP-STATUS.md  10K-SCAN-HANDOFF.md  ATTACK_GRAPH_IMPLEMENTATION.md  AUDIT-RESPONSE-PROMPT3.md  AUTORESEARCH-EXECUTIVE-SUMMARY.md  AUTORESEARCH-FP-FIX-SUMMARY.md  AUTORESEARCH-INSTRUCTIONS.md  AUTORESEARCH-QUESTIONS.md  AUTORESEARCH-READY.md  AUTORESEARCH-SESSION-GUIDE.md  AUTORESEARCH-SESSION-SUMMARY.md  AUTORESEARCH-SETUP-PLAN.md  AUTORESEARCH-STRATEGY.md  CONTEXT-FILTERING-FIX-COMPLETE.md  CRITICAL-FIXES-APPLIED.md  CURRENT-STATUS-AND-NEXT-STEPS.md  Cargo.toml  DOCS-INDEX.md  DOCUMENTATION-CATALOG.md  EVIDENCE-BASELINE-ANALYSIS.md  EVIDENCE-CURATION-FINAL.md  EVIDENCE-LIBRARY-CURATED.md  EVIDENCE-LIBRARY-STATUS.md  EVIDENCE-QUALITY-COMPARISON.md  EVIDENCE-TUNING-SUMMARY.md  EXPERTDOC.md  FINAL-COMPLETION-REPORT.md  GLASSWORM-EXECUTIVE-SUMMARY.md  GLASSWORM-INTEGRATION-PLAN-V0.9-REVISED.md  GLASSWORM-INTEGRATION-PLAN-V0.9.md  GLASSWORM-INTEL-INTEGRATION-PLAN.md  HANDOFF-AGENT.md  HANDOFF-WORKFLOW.md  (+73 more)
HANDOFF/: AGENT-GUIDANCE.md  ARCHITECTURAL-CONSIDERATIONS.md  ARCHITECTURE-OVERVIEW.md  CRITICAL-STATE-MAR24.md  FINAL-SESSION-SUMMARY.md  README.md  (+9 more)
glassware/: Cargo.toml  MIGRATION.md
glassware-cli/: Cargo.toml
glassware-cli/src/: main.rs
glassware-core/: Cargo.toml
glassware-core/src/: attack_graph.rs  blockchain_c2_detector.rs  cache.rs  campaign.rs  campaign_matcher.rs  config.rs  context_filter.rs  correlation.rs  cross_file_taint.rs  detector.rs  encrypted_payload_detector.rs  engine.rs  finding.rs  finding_pattern.rs  forcememo_detector.rs  gw005_semantic.rs  gw006_semantic.rs  gw007_semantic.rs  gw008_semantic.rs  header_c2_detector.rs  ir.rs  jpd_author_detector.rs  lib.rs  locale_detector.rs  minified.rs  module_graph.rs  rdd_detector.rs  risk_scorer.rs  scanner.rs  taint.rs  time_delay_detector.rs  unicode_detector.rs
glassware-core/src/adversarial/: fuzzer.rs  mod.rs  mutation.rs  polymorphic.rs  runner.rs  test_generator.rs
glassware-core/src/adversarial/fuzz_strategies/: boundary.rs  hybrid.rs  malformed.rs  mod.rs  random_unicode.rs  size_variation.rs
glassware-core/src/adversarial/strategies/: encoding.rs  mod.rs  unicode.rs  variable.rs
glassware-core/src/adversarial/templates/: forcememo.rs  glassware.rs  mod.rs  phantom_raven.rs
glassware-core/src/binary/: apc_injection.rs  extractor.rs  ielevator.rs  memexec.rs  metadata.rs  mod.rs  xorshift.rs
glassware-core/src/blockchain/: mod.rs  solana.rs
glassware-core/src/detectors/: bidi.rs  blockchain_polling.rs  browser_kill.rs  exfil_schema.rs  exfiltration.rs  glassware.rs  homoglyph.rs  invisible.rs  mod.rs  sandbox_evasion.rs  socketio_c2.rs  tags.rs  typo_attribution.rs  unicode_steganography_v2.rs
glassware-core/src/export/: mod.rs  yara.rs
glassware-core/src/host/: chrome.rs  enrichment.rs  filesystem.rs  mod.rs
glassware-core/src/llm/: analyzer.rs  config.rs  mod.rs  rate_limiter.rs
glassware-core/tests/: integration_attack_graph.rs  integration_campaign_fixtures.rs  integration_campaign_intelligence.rs  integration_cross_file.rs  integration_scan_directory.rs
glassware-core/tests/fixtures/adversarial/: README.md  bidi_substitution.js  combined_evasion.js  encoding_variation.js  homoglyph_substitution.js  pipe_delimiter_evasion.js  stego_variation.js  unicode_substitution.js  variable_rename.js  zw_substitution.js
glassware-core/tests/fixtures/cross_file/: decoder.js  encoder.ts  main.js  payload.js  runner.ts  utils.js
glassware-core/tests/fixtures/rdd_line_numbers/: package.json
glassware-orchestrator/: .glassware-orchestrator-cache.db  Cargo.toml  config.example.toml
glassware-orchestrator/orchestrator-benches/: Cargo.toml
glassware-orchestrator/orchestrator-benches/benches/: cache_performance.rs  memory_usage.rs  scan_speed.rs
glassware-orchestrator/orchestrator-cli/: Cargo.toml  README.md
glassware-orchestrator/orchestrator-cli/src/: cli.rs
glassware-orchestrator/orchestrator-core/: Cargo.toml  README.md
glassware-orchestrator/orchestrator-core/examples/: adversarial_test.rs  scan_github.rs  scan_npm.rs  with_llm.rs
glassware-orchestrator/orchestrator-core/src/: adversarial.rs  cacher.rs  checkpoint.rs  llm.rs  tracing.rs
glassware-orchestrator/src/: checkpoint.rs  cli.rs  config.rs  downloader.rs  error.rs  github.rs  lib.rs  llm.rs  main.rs  orchestrator.rs  progress.rs  rate_limiter.rs  retry.rs  scanner.rs  streaming.rs  tracing.rs
glassware-orchestrator/src/campaign/: command_channel.rs  config.rs  event_bus.rs  mod.rs  report.rs  state_manager.rs  types.rs  wave.rs
glassware-orchestrator/src/campaign/query/: handler.rs
glassware-orchestrator/src/formatters/: json.rs  sarif.rs
glassware-orchestrator/src/tui/: app.rs  mod.rs  ui.rs
glassware-orchestrator/templates/: report.md.tera
glassware-tools/: Cargo.toml  autoresearch.toml
glassware-tools/src/: benchmark.rs  config.rs  lib.rs  metrics.rs  optimizer.rs  report.rs
glassware/src/: adversarial.rs  cacher.rs  checkpoint.rs  cli.rs  cli_validator.rs  config.rs  error.rs  lib.rs  llm.rs  main.rs  orchestrator.rs  package_context.rs  retry.rs  sampler.rs  scan_registry.rs  scanner.rs  scoring.rs  scoring_config.rs  streaming.rs  version_checkpoint.rs  version_scanner.rs
glassware/src/campaign/: checkpoint.rs  config.rs  executor.rs  mod.rs  wave.rs
glassware/src/campaign/query/: handler.rs  mod.rs
glassware/src/formatters/: json.rs  mod.rs  sarif.rs
glassware/src/tui/: app.rs  ui.rs
glassware/tests/: scoring_tests.rs
glassworm-cli/: Cargo.toml
glassworm-cli/src/: main.rs
glassworm-core/: Cargo.toml
glassworm-core/src/: classify.rs  config.rs  decoder.rs  finding.rs  lib.rs  ranges.rs  scanner.rs  script_detector.rs
glassworm-core/src/confusables/: data.rs  mod.rs
glassworm-core/src/detectors/: bidi.rs  glassworm.rs  homoglyph.rs  invisible.rs  mod.rs  tags.rs
(+545 files in other folders)
