[workspace]
members = [
    "glassware-core",
    "glassware-cli",
    "glassware",
    "glassware-tools",
]
resolver = "2"

[workspace.package]
version = "0.8.0"
edition = "2021"
license = "MIT"
rust-version = "1.70"

[workspace.dependencies]
# Core
glassware-core = { path = "./glassware-core", version = "0.5.0" }

# Async - use selective features instead of "full" to reduce size
tokio = { version = "1.35", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
    "io-std",
    "net",
    "signal",
    "sync",
    "time",
    "process"
] }
tokio-retry = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

# HTTP
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
futures = "0.3"
walkdir = "2.4"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Concurrency
parking_lot = "0.12"
urlencoding = "2.1"
rand = "0.8"

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

[workspace.dependencies.tokio-test]
version = "0.4"

[workspace.dependencies.tempfile]
version = "3.8"

# Release profile optimization for smaller binaries
[profile.release]
opt-level = 3           # Full optimization
lto = true              # Link-time optimization
codegen-units = 1       # Single codegen unit (slower build, smaller binary)
strip = true            # Strip debug symbols
panic = "abort"         # Smaller panic handling

# Debug builds remain fast
[profile.dev]
opt-level = 0
debug = true
