[package]
name = "glassware-core"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Unicode attack detection library for GlassWare-style trojan source attacks"
keywords = ["unicode", "security", "trojan-source", "glassware", "scanner"]
categories = ["security", "text-processing"]

[dependencies]
# Core dependencies - minimal
unicode-script = "0.5"  # Essential for homoglyph/script detection
num_cpus = "1.16"  # For detecting number of CPU cores
rand = "0.8"  # For mutation strategies in adversarial testing
base64 = "0.21"  # For Base64 encoding in polymorphic templates

# Optional dependencies
regex = { version = "1.10", optional = true }  # For GlassWare pattern detection
serde = { version = "1.0", features = ["derive"], optional = true }  # For serialization
serde_json = { version = "1.0", optional = true }  # For JSON serialization
lazy_static = { version = "1.4", optional = true }  # For static pattern initialization
once_cell = { version = "1.19", optional = true }  # For lazy regex compilation
sha2 = { version = "0.10", optional = true }  # For content hashing in cache
tracing = { version = "0.1", optional = true }  # For logging in semantic detectors

# OXC semantic analysis (optional, JS/TS only)
oxc_allocator = { version = "0.40", optional = true }
oxc_parser = { version = "0.40", optional = true }
oxc_semantic = { version = "0.40", optional = true }
oxc_span = { version = "0.40", optional = true }
oxc_ast = { version = "0.40", optional = true }
oxc_index = { version = "2.0", optional = true }

# LLM analysis (optional, for L3 review layer)
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], optional = true }
dotenvy = { version = "0.15", optional = true }

# Binary analysis (optional, for .node file scanning)
goblin = { version = "0.7", optional = true }  # PE/ELF/Mach-O parser

[features]
default = ["full"]
full = ["regex", "serde", "serde_json", "lazy_static", "once_cell", "semantic", "cache", "binary"]
minimal = []  # Minimal: invisible chars and bidi only (no regex needed)
regex = ["dep:regex"]  # Enable regex-based pattern detection
lazy_static = ["dep:lazy_static"]  # Enable lazy static initialization
once_cell = ["dep:once_cell"]  # Enable once_cell for lazy regex
serde = ["dep:serde"]  # Enable serialization support
serde_json = ["dep:serde_json"]  # Enable JSON serialization
cache = ["dep:sha2", "serde", "serde_json"]  # Enable hash-based caching
semantic = [
    "dep:oxc_allocator",
    "dep:oxc_parser",
    "dep:oxc_semantic",
    "dep:oxc_span",
    "dep:oxc_ast",
    "dep:oxc_index",
    "regex",
    "once_cell",
    "dep:tracing",
]
llm = ["dep:reqwest", "dep:dotenvy", "serde", "serde_json"]  # LLM analysis layer
binary = ["dep:goblin"]  # Binary analysis (.node files)

[dev-dependencies]
tempfile = "3.9"

[[test]]
name = "integration_campaign_fixtures"
path = "tests/integration_campaign_fixtures.rs"
required-features = ["full"]

[[test]]
name = "integration_false_positives"
path = "tests/integration_false_positives.rs"
required-features = ["full"]

[[test]]
name = "integration_edge_cases"
path = "tests/integration_edge_cases.rs"
required-features = ["full"]

[[test]]
name = "integration_scan_directory"
path = "tests/integration_scan_directory.rs"
required-features = ["full"]
