[package]
name = "glassware-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Rust-based package scanning orchestrator"
authors = ["glassware team"]

[dependencies]
# Core - use workspace dependency
glassware-core = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-retry = { workspace = true }

# CLI
clap = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
futures = { workspace = true }
walkdir = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Concurrency
parking_lot = { workspace = true }
urlencoding = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "glassware-orchestrator"
path = "src/main.rs"
