[package]
name = "glassware-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Rust-based package scanning orchestrator"
authors = ["glassware team"]

[dependencies]
# Core - use workspace dependency
glassware-core = { workspace = true, features = ["binary"] }

# Async runtime
tokio = { workspace = true }
tokio-retry = { workspace = true }

# CLI
clap = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
futures = { workspace = true }
walkdir = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Concurrency
parking_lot = { workspace = true }
urlencoding = { workspace = true }
rand = { workspace = true }

# Rate limiting
governor = { workspace = true }
nonzero_ext = { workspace = true }

# Utilities
tempfile = { workspace = true }
tar = "0.4"
flate2 = "1.0"

# Configuration
toml = "0.8"
dirs = "5.0"
md5 = "0.7"
rusqlite = { version = "0.29", features = ["bundled"] }
tera = "1.19"

# TUI
ratatui = "0.24"
crossterm = "0.27"

[dev-dependencies]
tokio-test = { workspace = true }

[[bin]]
name = "glassware-orchestrator"
path = "src/main.rs"

[features]
default = ["llm", "binary"]
llm = []
rate-limit = []
retry = []
binary = ["glassware-core/binary"]