[package]
name = "glassware"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Unified GlassWare attack detection and campaign orchestration"
authors = ["glassware team"]

[dependencies]
# Core - use workspace dependency
glassware-core = { workspace = true, features = ["binary"] }

# Async runtime
tokio = { workspace = true }
tokio-retry = { workspace = true }

# CLI
clap = { workspace = true }

# HTTP client (optional - for LLM and GitHub API)
reqwest = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
futures = { workspace = true }
walkdir = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Concurrency
parking_lot = { workspace = true }
urlencoding = { workspace = true }
rand = { workspace = true }

# Rate limiting
governor = { workspace = true }
nonzero_ext = { workspace = true }

# Utilities
tempfile = { workspace = true }
tar = "0.4"
flate2 = "1.0"

# Configuration
toml = "0.8"
dirs = "5.0"
md5 = "0.7"
rusqlite = { version = "0.29", features = ["bundled"] }

# Optional: TUI support
ratatui = { version = "0.24", optional = true }
crossterm = { version = "0.27", optional = true }

# Optional: Report generation
tera = { version = "1.19", optional = true }

[dev-dependencies]
tokio-test = { workspace = true }

[[bin]]
name = "glassware"
path = "src/main.rs"

[features]
default = ["tui", "llm", "reports"]
tui = ["ratatui", "crossterm"]
llm = ["reqwest"]
reports = ["tera"]
minimal = []
rate-limit = []
retry = []
binary = ["glassware-core/binary"]
full = ["tui", "llm", "reports", "binary"]