[package]
name = "glassworm-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Detect invisible Unicode attacks in source code"
keywords = ["unicode", "security", "trojan-source", "glassworm", "scanner"]
categories = ["security", "command-line-utilities"]

[[bin]]
name = "glassworm"
path = "src/main.rs"

[dependencies]
glassworm-core = { path = "../glassworm-core", features = ["full"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
walkdir = "2.4"
