[package]
name = "glassworm-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Unicode attack detection library for Glassworm-style trojan source attacks"
keywords = ["unicode", "security", "trojan-source", "glassworm", "scanner"]
categories = ["security", "text-processing"]

[dependencies]
# Core dependencies - minimal
unicode-script = "0.5"  # Essential for homoglyph/script detection

# Optional dependencies
regex = { version = "1.10", optional = true }  # For Glassworm pattern detection
serde = { version = "1.0", features = ["derive"], optional = true }  # For serialization
lazy_static = { version = "1.4", optional = true }  # For static pattern initialization

[features]
default = ["full"]
full = ["regex", "serde", "lazy_static"]  # Full feature set with all detectors
minimal = []  # Minimal: invisible chars and bidi only (no regex needed)
serde = ["dep:serde"]  # Enable serialization support

[dev-dependencies]
tempfile = "3.9"
