[package]
name = "orchestrator-benches"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
# Workspace dependencies
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Internal crates
orchestrator-core = { path = "../orchestrator-core" }
glassware-core = { workspace = true }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

# For memory measurement
measureme = "11"

# For profiling
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

[dev-dependencies]
tempfile = "3"
rand = "0.8"

[[bench]]
name = "scan_speed"
harness = false

[[bench]]
name = "memory_usage"
harness = false

[[bench]]
name = "cache_performance"
harness = false
