[package]
name = "orchestrator-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for orchestrating glassware security scans across npm and GitHub"
readme = "README.md"

[features]
default = ["full"]
full = ["sqlite", "retry", "rate-limit"]
sqlite = ["dep:sqlx"]
retry = ["dep:tokio-retry"]
rate-limit = ["dep:governor"]

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Database (optional)
sqlx = { workspace = true, optional = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

# Concurrency
parking_lot = "0.12"

# Random for jitter
rand = "0.8"

# Rate limiting (optional)
governor = { version = "0.6", features = ["std"], optional = true }

# Retry logic (optional)
tokio-retry = { version = "0.3", optional = true }

# File utilities
tempfile = "3"

# Internal
glassware-core = { workspace = true }

# URL encoding
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
